--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,8 +35,52 @@
 			</div>
 		</div>
 	</div>
-	<div class="container" style="margin-top: 50px">
-<%= yield %>
+	
+	<!------Login---------->
+	<div class="modal hide fade" id="login">
+		<div class="modal-header">
+			<a class="close" data-dismiss="modal">x</a>
+			<h3>PonyPlus Online: Login</h3>
+		</div>
+		<div class="modal-body" id="longbody">
+			<div class="row">
+				<div class="span3">
+					<form class="form-vertical">
+						<input type="text" class="input" placeholder="Username or Email">
+						<br>
+						<input type="password" class="input" placeholder="Password">
+						<button type="submit" class="btn btn-primary">Sign In</button>
+					</form>
+				</div>
+			</div>
+			<b>Help: </b><a href="#"><u>I Forgot my Username or password</u></a>
+		</div>
+		<div class="modal-footer">
+			Don't have an account <a href="#"><u>Sign up Today</u></a>
+			<a href="#" class="btn btn-danger" data-dismiss="modal">Close</a>
+		</div>
 	</div>
+	
+	
+	<div class="container" style="margin-top: 50px">
+		<div class="row">
+			<div class="span2">
+				Left Side Bar
+			</div>
+			<div class="span8">
+				<%= yield %>
+			</div>
+			<div class="span2">
+				Right Side Bar
+			</div>
+		</div>
+	</div>
+	<footer class="footer">
+		<h4>PonyPlus Online</h4>
+		<li><a href="#">Account</a></li>
+		<li><a href="#">Link 1</a></li>
+		<li><a href-"#">Link 2</a></li>
+	</footer>
+	
 </body>
 </html>
