--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,37 +1,37 @@
-<h1>Listing products</h1>
+<h1>Pony Listings</h1>
 
 <table>
-  <tr>
-    <th>Id</th>
-    <th>Title</th>
-    <th>Description</th>
-    <th>Image url</th>
-    <th>Price</th>
-    <th>Category</th>
-    <th>Amount online</th>
-    <th>Amount store</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
 <% @products.each do |product| %>
-  <tr>
-    <td><%= product.id %></td>
-    <td><%= product.title %></td>
-    <td><%= product.description %></td>
-    <td><%= product.image_url %></td>
-    <td><%= product.price %></td>
-    <td><%= product.category %></td>
-    <td><%= product.amount_online %></td>
-    <td><%= product.amount_store %></td>
-    <td><%= link_to 'Show', product %></td>
-    <td><%= link_to 'Edit', edit_product_path(product) %></td>
-    <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
+
+    <td>
+      <%= image_tag(product.image_url, class: 'list_image') %></br>
+	  $<%= product.price %></br>
+	  Online: <%= product.amount_online%></br>
+	  Store: <%=product.amount_store%>
+    </td>
+
+    <td class="list_description">
+      <dl>
+        <dt><%= product.title %></dt>
+        <dd><%= truncate(strip_tags(product.description),
+               length: 80) %></dd>
+      </dl>
+	  </br>
+	  Category: <%= product.category%>
+    </td>
+
+    <td class="list_actions">
+      <%= link_to 'Show', product %><br/>
+      <%= link_to 'Edit', edit_product_path(product) %><br/>
+      <%= link_to 'Destroy', product, 
+                  confirm: 'Are you sure?',
+                  method: :delete %>
+    </td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Product', new_product_path %>
+<%= link_to 'New product', new_product_path %>
