--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :description %><br />
-    <%= f.text_area :description, rows: 6 %>
+    <%= f.text_area :description %>
   </div>
   <div class="field">
     <%= f.label :image_url %><br />
