--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -42,6 +42,10 @@
       margin-left: 100px;
       margin-top: 0.5em; 
       margin-bottom: 0.8em; 
+
+	  form, div{
+		display: inline;
+	  }
     }
 
     .price {
@@ -51,7 +55,5 @@
     }
   }
 }
-.container {
-    width: 960px;
-}
+
 /* END_HIGHLIGHT */
