--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,14 +72,24 @@
 	<div class="container getdown">
 		<div class="row">
 			<div class="span2 left-column">
-				Left
+				<h4>Categories</h4>
+				<ul>
+					<li>Ponies</li>
+					<li>Accessories</li>
+					<li>Movies</li>
+					<li>Others</li>
+				</ul>
 			</div>
-			<div class="span8 <%= controller.controller_name %>">
+			<div class="span7 <%= controller.controller_name %>">
 			<%= yield %>
 			
 			</div>
-			<div class="span2 right-column">
-				Right
+			<div class="span3 right-column">
+				<% if @cart %>
+					<%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+						<%= render @cart %>
+					<% end %>
+				<% end %>
 			</div>
 		</div>
 	</div>
