--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,7 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<!-- START_HIGHLIGHT -->
 <body>
-<!-- END_HIGHLIGHT -->
 	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
@@ -77,7 +75,8 @@
 					<li>Ponies</li>
 					<li>Accessories</li>
 					<li>Movies</li>
-					<li>Others</li>
+					<li>Games</li>
+					<li>Clothing</li>
 				</ul>
 			</div>
 			<div class="span7 <%= controller.controller_name %>">
