--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -1,4 +1,6 @@
-if ($('#cart tr').length == 1) { $('#cart').show('blind', 1000); }
+$('#notice').hide();
+
+if ($('#cart tr').length == 1) { $('#cart').show('blind', 500); }
 
 $('#cart').html("<%=j render @cart %>");
 
