Cart delete induvidual items

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,16 +17,10 @@
 }
 
 .left-column{
-	background: purple;
 	color: white;
-
-}
-
-.right-column{
+	min-height: 100%;
 	background: purple;
-	color: white;
 }
-
 
 input {
 	font-size: small;
