--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,48 +50,16 @@
 		</div>
 	</div>
 	
-	<!---------------Login-------------->
-	<div class="modal hide fade" id="login">
-		<div class="modal-header">
-	   		<a class="close" data-dismiss="modal">×</a>
-    		<h3>Login</h3>
-  		</div>
-  		<div class="modal-body" id="logbody">
-  			<div class="row">
-  				<div class="span3">
-    			<form class="form-vertical">
-  					<input type="text" class="input" placeholder="Username or Email">
-  					<br>
-  					<input type="password" class="input" placeholder="Password">
-  					<label class="checkbox">
-    					<input type="checkbox">Remember me on this computer
-    				</label>
-  					<button type="submit" class="btn btn-primary">Sign in</button>
-				</form>
-				</div>
-				<div class="span2">
-				<img src="img/generic-logo3.png"/>
-				</div>
-			</div>
-			<b>Help: </b><a href="#"><u>I forgot my username or password</u></a>
-			
-  		</div>
-  		<div class="modal-footer">
-    		Don't have an account <a href="#"><u>Sign up Today</u></a>
-			<a href="#" class="btn btn-danger" data-dismiss="modal">Close</a>
-  		</div>
-	</div>
-	
 	<div class="container getdown">
 		<div class="row">
-			<div class="span3 right-column">
+			<div class="span4 left-column">
 				<% if @cart %>
 					<%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
 						<%= render @cart %>
 					<% end %>
 				<% end %>
 			</div>
-			<div class="span9 <%= controller.controller_name %>">
+			<div class="span8 <%= controller.controller_name %> main">
 			<%= yield %>
 			
 			</div>
