--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Listing orders</h1>
 
-<table>
+<table class="table table-striped">
+  <thead>
   <tr>
     <th>Name</th>
     <th>Address</th>
@@ -10,6 +11,7 @@
     <th></th>
     <th></th>
   </tr>
+  </thead>
 
 <% @orders.each do |order| %>
   <tr>
