--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,45 +1,86 @@
 <p id="notice"><%= notice %></p>
+<div class="row">
+	<div class="span3">
+		<%= image_tag(@product.image_url) %>
+	</div>
+	<div class="span5">
+		<h3>
+		  
+		  <%= @product.title %>
+		</h3>
 
-<p>
-  <b>id:</b>
-  <%= @product.id %>
-</p>
+		<p>
+		  <b>Description:</b>
+		  <%= sanitize(@product.description) %>
+		</p>
+	</div>
+</div>
+<div class="row">
+	<div class="span2">
+		<p>
+  			<h5>Price:
+  			<%= number_to_currency @product.price %></h5>
+		</p>
+	</div>
+	<div class="span2 offset1">
+		<p>
+  			<h5>Category:
+  			<%= @product.category %></h5>
+		</p>
+	</div>
+	<div class="span3">
+		<%= button_to 'Add to Cart', line_items_path(product_id: @product),
+		 	remote: true %>
+		  <%= button_to 'Review', new_review_path(product_id: @product)%>
+		  <h5>Avearage Rating: <%= average_rating(@product)%>/10</h5>
+	</div>
+</div>
+	<% if session[:user_id] %>
+<div class="row">
+	<div class="span2">
+		<p>
+  			<b>Amount online:</b>
+  			<%= @product.amount_online %>
+		</p>
+	</div>
+	<div class="span2">
+		<p>
+  			<b>Amount store:</b>
+  			<%= @product.amount_store %>
+		</p>
+	</div>
+	<div class="span2">
+		<p>
+  			<b>Featured:</b>
+  			<%if @product.featured != 0%>
+			True
+  			<%else%>
+			False
+  			<%end%>
+		</p>
+	</div>
+</div>
+<h5><%= link_to 'Edit', edit_product_path(@product) %> 
+<%end%>
+<h5><%= link_to 'Back', :back %></h5>
 
-<p>
-  <b>Title:</b>
-  <%= @product.title %>
-</p>
+<div class="row">
+	<div class="span8">
+<h3>Reviews</h3>
+<table class="table table-striped">
+	<thead>
+		<tr>
+			<th>Rating</th>
+			<th>Comment</th>
+			<th>Name</th>
+		<tr>
+	</thead>
+	<tbody>
+<% @reviews.each do |review| %>
+  <%= render review %>
+<% end %>
+	</tbody>
+</table>
 
-<p>
-  <b>Description:</b>
-  <%= @product.description %>
-</p>
+</div>
 
-<p>
-  <b>Image url:</b>
-  <%= @product.image_url %>
-</p>
-
-<p>
-  <b>Price:</b>
-  <%= @product.price %>
-</p>
-
-<p>
-  <b>Category:</b>
-  <%= @product.category %>
-</p>
-
-<p>
-  <b>Amount online:</b>
-  <%= @product.amount_online %>
-</p>
-
-<p>
-  <b>Amount store:</b>
-  <%= @product.amount_store %>
-</p>
-
-
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
