--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,14 +4,15 @@
   <% end %>
 
 
-<table>
+<table class="table table-striped">
+  <thead>
   <tr>
     <th>Name</th>
     <th></th>
     <th></th>
     <th></th>
   </tr>
-
+  <thead>
 <% @users.each do |user| %>
   <tr>
     <td><%= user.name %></td>
