--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -20,6 +20,25 @@
   <%= @order.pay_type %>
 </p>
 
+<table class="table">
+	<thead>
+		<tr>
+			<th>Product</th>
+			<th>Quantity</th>
+			<th>Cost</th>
+		<tr>
+	</thead>
+	<tbody>
+<% @items.each do |item| %>
+	<tr>
+		<td><%= item.product.title%></td>
+		
+		<td><%= item.quantity%></td>
+		<td><%= number_to_currency item.total_price%></td>
+	</tr>
+<% end %>
+	<tbody>
+<table>
 
 <%= link_to 'Edit', edit_order_path(@order) %> |
 <%= link_to 'Back', orders_path %>
