--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -14,7 +14,8 @@
   <%= hidden_field_tag :product_id, params[:product_id]%>
   <div class="field">
     <%= f.label :rating %><br />
-    <%= f.number_field :rating %>
+    <%= f.select :rating, Review::RATINGS,
+ 							prompt: 'Select a Rating' %>
   </div>
   <div class="field">
     <%= f.label :comment %><br />
