--- a/app/views/store/search.html.erb
+++ b/app/views/store/search.html.erb
@@ -18,8 +18,9 @@
     <div class="price_line">
       <span class="price"><%= number_to_currency(product.price) %></span>
 	  <%= button_to 'Add to Cart', line_items_path(product_id: product),
-	 	remote: true %>
-	  Avearage Rating: <%= average_rating(product)%>/10
+	 	remote: true, :disabled =>product.amount_online ==0 %>
+	  <%= button_to 'Review', new_review_path(product_id: product)%>
+	  Average Rating: <%= average_rating(product)%>/10
     </div>
   </div>
 <% end %>
